--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "10.4.20",
     "eslint": "9.17.0",
     "eslint-config-next": "15.1.0",
+    "framer-motion": "^11.15.0",
     "next": "^13.4.8",
     "postcss": "8.4.49",
     "react": "^18.0.0",
