--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.14.0",
+    "react-vertical-timeline-component": "^3.5.3",
     "tailwindcss": "3.4.16",
     "typescript": "5.7.2"
+  },
+  "devDependencies": {
+    "@types/react-vertical-timeline-component": "^3.3.6"
   }
 }
