--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.14.0",
     "react-vertical-timeline-component": "^3.5.3",
+    "resend": "^0.16.0",
     "tailwindcss": "3.4.16",
     "typescript": "5.7.2"
   },
